<resources>
    <string name="app_name">MediVault+</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="search_hint">Search by type/doctor/date</string>
    <string name="upload_report">Upload Report</string>
    <string name="get_started">Get Started</string>
    <string name="logo">Logo</string>
    <string name="don_t_have_an_account_sign_up">Don’t have an account? Sign up</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Sign_up">Sign Up</string>
    <string name="Email">Email</string>
    <string name="mail">Email</string>
    <string name="medivault">"
</string>

    <string name="create_account">Create Account</string>
    <string name="user_name">Name</string>
    <string name="age">Age</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="signup">Signup</string>

    <string name="emergency_information">Emergency Information</string>
    <string name="blood_group">Blood Group</string>
    <string name="allergies">Allergies</string>
    <string name="emergency_contact_no">Emergency Contact No.</string>
    <string name="doctor_contact_no">Doctor Contact No.</string>
    <string name="save_emergency_info">Save Emergency Info</string>

</resources>
